--- a/arrays/arrayEx1.html
+++ b/arrays/arrayEx1.html
@@ -19,19 +19,34 @@
         const ch = document.getElementById("checkALL");
 
         function change () {
-            if(ch.checked==true){
-                for (let i=0;i<a.length;i++){
+            console.log(a[0].checked);
+        }
+
+        function change () {
+            for (let i=0;i<a.lenght;i++){
+                if(a[0].checked==true){
                     a[i].checked=true
-                }
-            } else {
-                for (let i=0;i<a.length;i++){
+                } else {
                     a[i].checked=false
                 }
             }
         }
 
+
+        // function change () {
+        //     if(ch.checked==true){
+        //         for (let i=0;i<a.length;i++){
+        //             a[i].checked=true
+        //         }
+        //     } else {
+        //         for (let i=0;i<a.length;i++){
+        //             a[i].checked=false
+        //         }
+        //     }
+        // }
+
         
-        
+
         //         console.log(a[i].checked)
         // a[1].checked = false;
 
