--- a/events/eventStudy1.html
+++ b/events/eventStudy1.html
@@ -18,23 +18,27 @@
         const btn2 = document.getElementById("btn2");
         const btn3 = document.getElementById("btn3");
         
-        btn.onclick = function() {
-            console.log=("good")
+        btn.onclick = go
+
+        function go () {
+            console.log("good")
         }
 
-        // btn.onclick = go() 함수를 먼저 호출
-        // btn2.onclick = go;
+        btn.onclick = go() //함수를 먼저 호출
+        btn2.onclick = go;
         btn2.onclick = function() {
             go()
         }
+
+        function go(){
+            console.log("go")
+        }
+
 
         btn3.addEventListener("click", function(){
             console.log("btn3")
         })
 
-        function go(){
-            console.log("go")
-        }
 
     </script>
 
