--- a/elements/eleEx.html
+++ b/elements/eleEx.html
@@ -21,7 +21,7 @@
         const ar = ["바나나", "사과", "딸기", "수박", "참외"];
         const d = document.getElementById("d")
 
-
+        
 
 
         for (let j=0;j<ar.length;j++){
@@ -47,6 +47,7 @@
             // body div에 자식 div 입력
             d.appendChild(v)
 
+                v.classList.add("k")
 
         }
 
