--- a/elements/eleStudy3.html
+++ b/elements/eleStudy3.html
@@ -4,11 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+
+        .c1 {
+            width: 200px;
+            height: 200px;
+        }
+
+        .bg_red {
+            background-color: red;
+        }
+
+        .bg_blue {
+            background-color: blue;
+        }
+
+
+    </style>
+
 </head>
 <body>
-    
+    <div id="del1" class="c1 bg_red">
+
+        <input type="text">
+
+    </div>
+
+    <div id="del2" class="c1 bg_blue">
+
+        <img src="/images/KHK1.JPG" id="im">
+
+    </div>
 
 
-    
+    <script>
+        const del1= document.getElementById ("del1")
+        const del2= document.getElementById ("del2")
+
+        del1.addEventListener ("click", function () {
+            del1.remove();
+        })
+
+        del2.addEventListener ("click", function () {
+            del2.removeChild(document.getElementById("im")); //일시적으로 사용시 변수 대입안하고 바로 불러와도됨.
+        })
+
+    </script>
+
 </body>
 </html>
