--- a/elements/eleStudy4.html
+++ b/elements/eleStudy4.html
@@ -40,7 +40,7 @@
                 // let k = this.parentNode  //.parentNode 자식 기준으로 부모찾기
                 // k.remove()
 
-                c1[i].remove()
+                ce1[i].remove()
                 console.log ("div :", c1.length)
                 console.log ("button :", btn1.length)
                 console.log ("index :", i)
