--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index Page</h1>
+    <h1>Kwan Page</h1>
     <h3>Test1</h3>
 
     <h3>github test</h3>
