--- a/events/eventStudy6.html
+++ b/events/eventStudy6.html
@@ -34,7 +34,7 @@
         result.addEventListener("click", function(e){
 
             if(e.target.classList.contains("ch")){
-
+                console.log ("go")
             }
 
         })
