--- a/elements/eleStudy4.html
+++ b/elements/eleStudy4.html
@@ -44,6 +44,7 @@
                 console.log ("div :", c1.length)
                 console.log ("button :", btn1.length)
                 console.log ("index :", i)
+                console.log(this.getAttribute("data-del-num"))
 
                 document.getElementById("result"+this.getAttribute("data-del-num")).remove()
             })
